# pico-sdk

./: .gitignore  CMakeLists.txt  config.json  scripts.sh  test.c
src/: blink.pio  main.c
